# relay-board-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
doc/: README.md
src/relay_board_py/: __init__.py  __main__.py  relay_board.py  relay_board_hardware.py  relay_board_pattern.py  serial_interface.py  serial_number.py
